<resources>
    <string name="app_name">账房先生</string>
    <string name="text_leftMoney">净资产</string>
    <string name="_0">￥0</string>
    <string name="text_moth">本月</string>
    <string name="text_today">今天</string>
    <string name="text_mark">记一笔</string>
    <string name="tex_payment">支出</string>
    <string name="text_save">保存</string>
    <string name="_0_0">今日已用￥0，还可用￥0</string>
    <string name="text_0_0">本月已用￥0，还可用￥0</string>
    <string name="text_0">￥0</string>
    <string name="text_about">关于</string>
    <string name="text_settingBack">设置首页背景</string>
    <string name="text_settingMoney">设置预算</string>
    <string name="text_moneyMoth">本月预算</string>
    <string name="text_MoneyDay">每日预算</string>
    <string name="checkbox">CheckBox</string>
    <string name="textBZ">备注</string>
    <string name="text_水电煤气">水电煤气</string>
    <string name="text_学习用品">学习用品</string>
    <string name="text_中晚餐">中晚餐</string>
    <string name="text_礼物">礼物</string>
    <string name="text_公交卡">公交卡</string>
    <string name="text_网购">网购</string>
    <string name="text_水果零食">水果零食</string>
    <string name="text_早餐">早餐</string>
    <string name="text_其他">其他</string>
    <string name="text_分类标签">分类标签</string>
    <string name="text_time">时间</string>
</resources>
